--- a/_includes/about-body.html
+++ b/_includes/about-body.html
@@ -188,6 +188,7 @@
                             <li style="color:#ffd34e; font-weight:700;">Alyda</li> <!--100$ 26/01/21-->
                             <li style="color:#fff8e1">시아</li> <!--99$ 25/07/10-->
                             <li style="color:#ad7326">SpoonceDaSpoon</li> <!--54$ 26/01/20-->
+                            <li>정*영</li> <!--50000 26/02/23-->
                             <li>Arthur</li> <!--30$ 25/08/10-->
                             <li>EMajorinc</li> <!--30$ 26/01/21-->
                             <li>안*현</li> <!--30000 25/09/10-->
@@ -199,6 +200,7 @@
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
                             <li>ZexVolts</li><!--15$ 26/02/01-->
                             <li>Mistiry Shak</li><!--15$ 26/02/20-->
+                            <li>Ciladis</li><!--15$ 26/02/23-->
                             <li>Trishelle</li> <!--12$ 26/01/20-->
                             <li>skippy</li> <!--12$ 26/01/21-->
                             <li>Chron</li> <!--12$ 26/02/01-->
@@ -220,6 +222,7 @@
                             <li>Odderpop</li> <!--6$ 26/01/21-->
                             <li>lpmafiota</li> <!--6$ 26/01/31-->
                             <li>Ieat coffe</li> <!--6$ 26/01/31-->
+                            <li>Ulape</li><!--6$ 26/02/23-->
                             <li>Dinjoralo</li> <!--5$ 26/01/31-->
                             <li>Katsuna</li> <!--5$ 26/02/20-->
                             <li>Nova</li> <!--3$ 26/01/07-->
