--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -354,6 +354,8 @@
 <script src="/apps/home/js/sos.js?v={{ site.time | date: '%s' }}"></script>
 <!-- Quick Grid JS -->
 <script src="/apps/home/js/quick-grid.js?v={{ site.time | date: '%s' }}"></script>
+<!-- Account Service Notice Modal -->
+<!-- <script src="/apps/home/js/account-service-notice.js?v={{ site.time | date: '%s' }}"></script> -->
 <link rel="stylesheet" href="/apps/home/js/carousel.css?v={{ site.time | date: '%s' }}">
 
 
