--- a/_includes/about-body.html
+++ b/_includes/about-body.html
@@ -188,7 +188,7 @@
                             <li style="color:#ffd34e; font-weight:700;">Alyda</li> <!--100$ 26/01/21-->
                             <li style="color:#fff8e1">시아</li> <!--99$ 25/07/10-->
                             <li style="color:#ad7326">SpoonceDaSpoon</li> <!--54$ 26/01/20-->
-                            <li>정*영</li> <!--50000 26/02/23-->
+                            <li>카이류</li> <!--50000 26/02/23-->
                             <li>Arthur</li> <!--30$ 25/08/10-->
                             <li>EMajorinc</li> <!--30$ 26/01/21-->
                             <li>안*현</li> <!--30000 25/09/10-->
