--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
   -->
 
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   {% assign page_path_for_fonts = page.permalink | default: page.url | downcase %}
   {% if page_path_for_fonts contains 'revelation-setting' %}
