--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -60,6 +60,10 @@
     --label-red: #ff7777;
 }
 
+h2, h3 {
+    font-weight: 600;
+}
+
 /* html{ scrollbar-gutter: stable both-edges; }*/
 /* ===== Global Styles ===== */
 
