--- a/_includes/critical-calc-body.html
+++ b/_includes/critical-calc-body.html
@@ -61,7 +61,10 @@
         <span class="current-page" id="navCurrent">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title">-</h1>
+        <div class="header-title">
+            <h1 id="page-title">-</h1>
+            <p class="page-description" id="page-description"></p>
+        </div>
         <label id="spoilerToggleWrap"
             style="display:flex; align-items:center; cursor:pointer; font-size:13px; opacity:0.85;">
             <input type="checkbox" id="showSpoilerToggle"> <span id="showSpoilerLabel"
