--- a/_includes/gallery-body.html
+++ b/_includes/gallery-body.html
@@ -57,6 +57,7 @@
     </div>
     <div class="header-container">
       <h1 id="gallery-title" data-i18n="pageTitle">-</h1>
+      <p class="page-description" id="page-description" data-i18n="pageDescription"></p>
     </div>
     <!-- 
     <p id="gallery-desc" class="korean-content">썸네일을 클릭하면 원본 이미지를 모달로 확인할 수 있습니다.</p>
