--- a/_includes/guides-body.html
+++ b/_includes/guides-body.html
@@ -61,6 +61,7 @@
 
     <div class="header-container">
         <h1 data-i18n="pageTitle">-</h1>
+        <p class="page-description" id="page-description" data-i18n="pageDescription"></p>
     </div>
 
     <!-- Guides List Container -->
