--- a/_includes/material-calc-body.html
+++ b/_includes/material-calc-body.html
@@ -60,7 +60,10 @@
     </div>
 
     <div class="header-container">
-        <h1 id="plannerTitle" data-i18n="pageTitle">-</h1>
+        <div class="header-title">
+            <h1 id="plannerTitle" data-i18n="pageTitle">-</h1>
+            <p class="page-description" id="page-description" data-i18n="pageDescription"></p>
+        </div>
         <div class="planner-toolbar">
             <button id="resetBtn" class="primary-btn" style="padding: 8px 10px;" data-i18n="reset">-</button>
             <!-- Backup / Load buttons (hidden on <=768px) -->
