--- a/_includes/pull-tracker-body.html
+++ b/_includes/pull-tracker-body.html
@@ -57,7 +57,10 @@
     </div>
 
     <div class="header-container">
-        <h1 id="pageTitle">Pull Tracker</h1>
+        <div class="header-title">
+            <h1 id="pageTitle">Pull Tracker</h1>
+            <p class="page-description" id="page-description"></p>
+        </div>
         <div class="pull-tracker-header-tools">
             <div id="pull-tracker-mode-tabs" class="pull-tracker-mode-tabs" role="tablist" aria-label="Pull tracker mode tabs">
                 <a id="pull-tracker-tab-individual" class="pull-tracker-mode-tab" role="tab" data-mode="individual" href="/pull-tracker/">Pull Tracker</a>
