--- a/_includes/tactics-body.html
+++ b/_includes/tactics-body.html
@@ -60,7 +60,10 @@
         <span class="current-page" id="nav-current" data-i18n="nav_current">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title" data-i18n="page_title">-</h1>
+        <div class="header-title">
+            <h1 id="page-title" data-i18n="page_title">-</h1>
+            <p class="page-description" id="page-description" data-i18n="page_description"></p>
+        </div>
     </div>
     <!-- 로그인 사용자 정보 바 -->
     <div id="userInfoBar" class="user-info-bar" style="display:none; margin-top:8px;">
