--- a/_includes/persona-body.html
+++ b/_includes/persona-body.html
@@ -106,6 +106,7 @@
     </div>
     <div class="header-container">
         <h1 id="page-title" data-i18n="pageTitle">-</h1>
+        <p class="page-description" id="page-description" data-i18n="pageDescription"></p>
     </div>
 
 
