--- a/_includes/pull-calc-body.html
+++ b/_includes/pull-calc-body.html
@@ -67,6 +67,7 @@
     <!-- Header -->
     <div class="header-container">
         <h1 id="page-title">-</h1>
+        <p class="page-description" id="page-description"></p>
     </div>
 
     <!-- Must Read Accordion -->
