--- a/_includes/revelations-body.html
+++ b/_includes/revelations-body.html
@@ -62,6 +62,7 @@
     </div>
     <div class="header-container">
         <h1 id="page-title" data-i18n="page_title">-</h1>
+        <p class="page-description" id="page-description" data-i18n="page_description"></p>
     </div>
 
     <!-- Filter section -->
