--- a/_includes/schedule-body.html
+++ b/_includes/schedule-body.html
@@ -62,6 +62,7 @@
     <!-- Header -->
     <div class="header-container">
         <h1 id="page-title" data-i18n="pageTitle">-</h1>
+        <p class="page-description" id="page-description" data-i18n="pageDescription"></p>
     </div>
 
     <!-- Notice Banner -->
