--- a/apps/critical-calc/critical-calc.css
+++ b/apps/critical-calc/critical-calc.css
@@ -40,7 +40,7 @@ input[type="checkbox"]:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 0px;
+    padding: 0 0px 10px 0px;
 }
 
 #spoilerToggleWrap {
