--- a/apps/defense-calc/defense-calc.css
+++ b/apps/defense-calc/defense-calc.css
@@ -53,7 +53,7 @@ input[type="checkbox"]:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 0px;
+    padding: 0 0px 10px 0px;
 }
 
 #spoilerToggleWrap {
