--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -215,10 +215,24 @@ body {
     margin: 0;
 }
 
+.header-title {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
 .header-container h1 {
     font-size: 28px;
     color: rgb(255, 255, 255, 0.9);
-    margin: 0 0 10px 0;
+    margin: 0 0 6px 0;
+}
+
+.page-description {
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.4);
+    margin: 0;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .main-content {
