--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -16,33 +16,65 @@
 
 @font-face {
     font-family: 'EnglishFont';
-    src: url('https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2') format('woff2');
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwSGFWfOw.woff2') format('woff2');
     font-weight: 400;
-    unicode-range: U+0020-007E, U+00A0-00FF, U+0100-024F;
+    unicode-range: U+0100-024F;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'EnglishFont';
-    src: url('https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuI6fAZ9hiA.woff2') format('woff2');
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwcGFU.woff2') format('woff2');
+    font-weight: 400;
+    unicode-range: U+0020-007E, U+00A0-00FF;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'EnglishFont';
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwSGFWfOw.woff2') format('woff2');
     font-weight: 600;
-    unicode-range: U+0020-007E, U+00A0-00FF, U+0100-024F;
+    unicode-range: U+0100-024F;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'EnglishFont';
-    src: url('https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuFuYAZ9hiA.woff2') format('woff2');
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwcGFU.woff2') format('woff2');
+    font-weight: 600;
+    unicode-range: U+0020-007E, U+00A0-00FF;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'EnglishFont';
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwSGFWfOw.woff2') format('woff2');
     font-weight: 700;
-    unicode-range: U+0020-007E, U+00A0-00FF, U+0100-024F;
+    unicode-range: U+0100-024F;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'EnglishFont';
-    src: url('https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuDyYAZ9hiA.woff2') format('woff2');
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwcGFU.woff2') format('woff2');
+    font-weight: 700;
+    unicode-range: U+0020-007E, U+00A0-00FF;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'EnglishFont';
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwSGFWfOw.woff2') format('woff2');
     font-weight: 800;
-    unicode-range: U+0020-007E, U+00A0-00FF, U+0100-024F;
+    unicode-range: U+0100-024F;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'EnglishFont';
+    src: url('https://fonts.gstatic.com/s/geist/v4/gyByhwUxId8gMEwcGFU.woff2') format('woff2');
+    font-weight: 800;
+    unicode-range: U+0020-007E, U+00A0-00FF;
     font-display: swap;
 }
 
