--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -70,7 +70,7 @@
         /* 선택기와의 간격 */
     }
 
-    /* Quick Grid styles moved to assets/js/home/quick-grid.js */
+    /* Quick Grid core styles are preloaded in /apps/home/home.css */
 </style>
 
 
@@ -114,7 +114,7 @@
 
 
     <!-- Carousel: inserted above menu-cards -->
-    <div id="home-carousel-root" style="width: 100%;"></div>
+    <div id="home-carousel-root"></div>
 
     <!--<div class="separator-line"></div>-->
     <!-- Main content -->
