--- a/apps/home/js/carousel.css
+++ b/apps/home/js/carousel.css
@@ -5,7 +5,14 @@
   right: 30%;
   top: 77%;
   transform: translateY(-50%) scale(1.65);
-  scale:1.1;
+  scale: 1.1;
+}
+
+@media (max-width: 768px) {
+  .char-img.single-banner {
+    transform: translateY(-60%) scale(2.5) !important;
+    right: 15% !important;
+  }
 }
 
 .char-img.middle[alt*="유카리"] {
@@ -14,12 +21,14 @@
 }
 
 /* 미오 */
-.char-img.single-banner[src*="%EB%AF%B8%EC%98%A4"] { 
+.char-img.single-banner[src*="%EB%AF%B8%EC%98%A4"] {
   top: 65%;
 }
 
 /* 모토하 여름 */
-.char-img.single-banner[src*="%EB%AA%A8%ED%86%A0%ED%95%98%C2%B7%EC%97%AC%EB%A6%84"] { scale:1.13;}
+.char-img.single-banner[src*="%EB%AA%A8%ED%86%A0%ED%95%98%C2%B7%EC%97%AC%EB%A6%84"] {
+  scale: 1.13;
+}
 
 /* 토모코 여름 
 .char-img.single-banner[src*="%ED%86%A0%EB%AA%A8%EC%BD%94%C2%B7%EC%97%AC%EB%A6%84"] { }*/
@@ -28,7 +37,9 @@
 .char-img.single-banner[src*="%ED%86%A0%EB%AA%A8%EC%BD%94%C2%B7%EC%97%AC%EB%A6%84"] { scale: 1.1;}*/
 
 /* 리코 매화 */
-.char-img.single-banner[src*="%EB%A6%AC%EC%BD%94%C2%B7%EB%A7%A4%ED%99%94"] { top: 97%;}
+.char-img.single-banner[src*="%EB%A6%AC%EC%BD%94%C2%B7%EB%A7%A4%ED%99%94"] {
+  top: 97%;
+}
 
 
 
