--- a/apps/home/home.css
+++ b/apps/home/home.css
@@ -165,7 +165,7 @@
     margin-top: 2px;
     color: #fff;
     font-size: 13px;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: .2px;
     text-align: center;
     line-height: 1.25;
@@ -175,6 +175,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    letter-spacing: -0.02rem;
 }
 
 .quick-new-badge {
