--- a/_includes/home-body.html
+++ b/_includes/home-body.html
@@ -354,6 +354,19 @@
 <script src="/apps/home/js/sos.js?v={{ site.time | date: '%s' }}"></script>
 <!-- Quick Grid JS -->
 <script src="/apps/home/js/quick-grid.js?v={{ site.time | date: '%s' }}"></script>
+<!-- Lufelnet Anniversary Modal -->
+<script>
+    // ON/OFF: enabled 값을 true/false로 바꾸면 됩니다.
+    window.HOME_ANNIVERSARY_MODAL_CONFIG = {
+        enabled: true,
+        modalVersion: '2026-1st-anniversary-v1',
+        showOncePerVersion: true,
+        startAt: '2026-02-27T00:00:00+09:00',
+        endAt: '2026-03-05T23:59:59+09:00',
+        imageSrc: '/assets/img/home/Texture-huigui-qiribg03.png'
+    };
+</script>
+<script src="/apps/home/js/anniversary-modal.js?v={{ site.time | date: '%s' }}"></script>
 <!-- Account Service Notice Modal -->
 <!-- <script src="/apps/home/js/account-service-notice.js?v={{ site.time | date: '%s' }}"></script> -->
 <link rel="stylesheet" href="/apps/home/js/carousel.css?v={{ site.time | date: '%s' }}">
